[tool.poetry]
name = "pornstar"
version = "0.6"
description = "Make you become the next porn star!"
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
moviepy = "^1.0.3"
opencv-python = "^4.5.5"
auto-everything = "^3.9"
matplotlib = "^3.5.1"
dlib = "^19.22.1"
pydub = "^0.25.1"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
